--- a/src/akkiai/config/tasks2.yaml
+++ b/src/akkiai/config/tasks2.yaml
@@ -1,20 +1,329 @@
----
-collect_market_data_task1:
-  description: >-
-    Search the {MARKET_DATA_URL} for relevant market research data, focusing on
-    the specific area of interest: {RESEARCH_FOCUS}. Gather the most insightful
-    data points that can inform the analysis.
-  expected_output: >-
-    A  collection of concise insightful market research data relevant to
-    {RESEARCH_FOCUS} sourced from {MARKET_DATA_URL}.
-  agent: MarketDataCollector1
+creating_buyer_persona:
+  description: >
+    You are tasked with creating a detailed buyer persona based on the given
+    information and answering specific questions about the target audience. 
+    This persona will help in understanding the ideal customer and tailoring
+    marketing strategies effectively. The target audience details will be given
+    by the output of finding_target_audience task. Here's the information you'll
+    be working with:
 
-analyze_insights_task1:
-  description: >-
-    Analyze the collected market data based on the research focus:
-    {RESEARCH_FOCUS}. Derive actionable insights that can guide strategic
-    decision-making.
-  expected_output: >-
-    A 2 line report detailing actionable insights derived from the market data
-    analysis relevant to {RESEARCH_FOCUS}.
-  agent: MarketDataAnalyser1
+    <target_audience> {{TARGET_AUDIENCE}} </target_audience>
+
+    <business_details> {{BUSINESS_DETAILS}} </business_details>
+
+    <product_description> {{PRODUCT_DESCRIPTION}} </product_description>
+
+    Now, you'll need to answer the following questions for B2B and B2C market:
+
+    <B2B questions> - B2B persona questions will be provided from the output of
+    the `creating_b2b_persona` task. </B2B questions>
+
+    <B2C questions> - B2C persona questions will be provided from the output of
+    the `creating_b2c_persona` task. </B2C questions>
+
+    Approach the task as follows:
+
+    1. Carefully read and analyze the provided information about the target
+    audience, business details, and product/service/solution.
+
+    2. Answer each question in the list, using the information provided. If a
+    question cannot be answered directly from the given information, make a
+    reasonable inference based on the context, and note that it's an inference.
+
+    3. Use your answers to create a comprehensive buyer persona. This persona
+    should be a fictional representation of the ideal customer, incorporating
+    all the information you've gathered and inferred.
+
+    4. When creating the persona, organize the information into the following
+    categories:
+      - Demographic Information
+      - Psychographic Information
+      - Behavioral Information
+      - Buying Process
+      - Consumption Patterns
+      - Aspirations
+
+    5. Give your persona a name and include a brief narrative description that
+    brings the character to life.
+  expected_output: |
+    Present your output in the following format:
+
+     <buyer_persona>
+     <name>[Insert persona name]</name>
+
+     <narrative>
+     [Insert brief narrative description of the persona]
+     </narrative>
+
+     <demographic_information>
+     [List demographic details]
+     </demographic_information>
+
+     <psychographic_information>
+     [List psychographic details]
+     </psychographic_information>
+
+     <behavioral_information>
+     [List behavioral details]
+     </behavioral_information>
+
+     <buying_process>
+     [Describe the buying process]
+     </buying_process>
+
+     <consumption_patterns>
+     [Describe consumption patterns]
+     </consumption_patterns>
+
+     <aspirations>
+     [List aspirations]
+     </aspirations>
+     </buyer_persona>
+
+     Ensure that your buyer persona is detailed, coherent, and aligns with the provided information about the target audience, 
+     business, and product/service/solution.
+  agent: BuyerPersonaAgent
+  inputs:
+    target_audience: '{{TARGET_AUDIENCE}}'
+    business_details: '{{BUSINESS_DETAILS}}'
+    product_description: '{{PRODUCT_DESCRIPTION}}'
+    b2b_persona_questions: '{{creating_b2b_persona.output}}'
+    b2c_persona_questions: '{{creating_b2c_persona.output}}'
+
+creating_b2c_persona:
+  description: >
+    Imagine you are trying to understand your ideal customer for your product or
+    service.  Answer the following questions to create a detailed B2C Buyer
+    Persona that reflects the specific characteristics, behaviors,  and
+    motivations of your target audience. 1. Demographics:
+      - What is the age, gender, and income range of your ideal customer?
+      - Where do they live (urban, suburban, rural)?
+      - What is their education level?
+      - What is their occupation?
+
+    2. Psychographics:
+      - What are their interests, hobbies, and values?
+      - What motivates them in life? (e.g., success, family, personal development)
+      - What are their main goals or aspirations?
+      - What are their biggest fears or challenges?
+
+    3. Behavior Patterns:
+      - How do they spend their free time? What social media platforms or websites do they frequent?
+      - What are their purchasing habits (e.g., impulsive vs. planned, price-conscious vs. brand-conscious)?
+      - How do they prefer to engage with brands (e.g., email, social media, in-person)?
+
+    4. Consumption Patterns:
+      - What products/services are they currently using that are similar to yours?
+      - How do they typically make buying decisions (e.g., research, word of mouth, reviews)?
+      - What factors are most important to them when making a purchase (e.g., price, quality, convenience)?
+
+    5. Pain Points:
+      - What problems or frustrations does your customer experience that your product/service could solve?
+      - What obstacles prevent them from achieving their goals?
+
+    6. Buying Triggers:
+      - What might push them to seek a solution or make a purchase? (e.g., life event, specific need, dissatisfaction with current solution)
+
+    7. Communication Preferences:
+      - How do they like to be communicated with? (e.g., personalized email, social media ads, customer service chat)
+      - What tone or style of communication resonates with them? (e.g., professional, casual, friendly)
+  expected_output: >
+    A comprehensive B2C Buyer Persona that includes the following sections: 1.
+    Demographics: Age, gender, income range, location, education level, and
+    occupation. 2. Psychographics: Interests, motivations, aspirations, fears,
+    and challenges. 3. Behavior Patterns: Free time activities, social media
+    usage, purchasing habits, and preferred brand engagement methods. 4.
+    Consumption Patterns: Similar products/services used, buying decision
+    process, and important purchasing factors. 5. Pain Points: Specific problems
+    or frustrations the customer faces that the product/service can solve. 6.
+    Buying Triggers: Events or situations that might push the customer to seek a
+    solution or make a purchase. 7. Communication Preferences: How the customer
+    prefers to be communicated with and the preferred tone/style of
+    communication.
+  agent: B2CPersonaAnalystAgent
+
+creating_b2b_persona:
+  description: >
+    To build a clear and detailed Buyer Persona for your target audience, please
+    answer the following questions based on your business and industry.  This
+    persona will represent the key decision-makers and influencers within your
+    target businesses. 1. Demographic Information:
+      - What is the role or job title of your ideal buyer (e.g., CMO, IT Manager)?
+      - What is the typical company size (e.g., number of employees, annual revenue)?
+      - In what industry or vertical do they work (e.g., SaaS, manufacturing, healthcare)?
+      - What is their geographic location (if relevant)?
+
+    2. Professional Background:
+      - What is their experience level (e.g., years in their current role, expertise)?
+      - What are their daily responsibilities?
+      - What are the typical challenges they face in their role?
+      
+    3. Pain Points and Needs:
+      - What specific problems or pain points does this buyer experience in their work that your product or service can solve?
+      - What is the impact of these problems on their business (e.g., productivity loss, revenue loss)?
+      - What are their goals or objectives? What are they trying to achieve by solving this problem (e.g., efficiency, cost-saving)?
+
+    4. Buying Triggers:
+      - What events or circumstances prompt them to start looking for a solution (e.g., budget cycles, regulatory changes, new project launches)?
+      - How do they typically search for solutions (e.g., online research, networking, conferences)?
+      - What is the decision-making process like? Who else in their organization is involved?
+
+    5. Buying Behavior:
+      - What are their buying criteria (e.g., price, reputation, support, scalability)?
+      - How do they evaluate different options (e.g., product demos, case studies, referrals)?
+      - What are their key objections or concerns when choosing a solution?
+
+    6. Communication Preferences:
+      - Where do they consume information (e.g., LinkedIn, industry blogs, webinars)?
+      - How do they prefer to be contacted (e.g., email, phone, social media)?
+      - What types of content resonate most with them (e.g., whitepapers, product comparisons, testimonials)?
+
+    7. Personal Goals and Motivations:
+      - What are their personal motivations in their role (e.g., recognition, career growth)?
+      - How does solving the problem impact their personal success within the company?
+
+    8. Key Influencers:
+      - Who influences their decision-making (e.g., CFO, IT team, peers, analysts)?
+      - Are there any external influences (e.g., industry trends, competitors’ decisions) that affect their choices?
+  expected_output: >
+    A comprehensive B2B Buyer Persona that includes the following sections: 1.
+    Demographic Information: Role or job title, company size, industry, and
+    geographic location. 2. Professional Background: Experience level, daily
+    responsibilities, and typical challenges faced. 3. Pain Points and Needs:
+    Specific problems, the impact of those problems, and the goals the buyer is
+    aiming to achieve. 4. Buying Triggers: Events or circumstances prompting the
+    search for a solution, search methods, and the decision-making process. 5.
+    Buying Behavior: Buying criteria, evaluation methods, and key objections or
+    concerns. 6. Communication Preferences: Information consumption habits,
+    preferred communication channels, and content preferences. 7. Personal Goals
+    and Motivations: Personal motivations and the impact of solving the problem
+    on their success. 8. Key Influencers: Influencers involved in the
+    decision-making process and external influences affecting their decisions.
+  agent: B2BPersonaAnalystAgent
+
+analysing_jtbd:
+  description: >
+    You are tasked with creating a brief statement using the Jobs to be Done
+    (JTBD) framework to summarize the main "job" a  given
+    product/service/solution helps customers accomplish, and why they would
+    "hire" this product/service/solution over other options. You will be
+    provided with the following information:
+
+    <business_details> {{BUSINESS_DETAILS}} </business_details>
+
+    <product_description> {{PRODUCT_DESCRIPTION}} </product_description>
+
+    <target_audience> {{TARGET_AUDIENCE}} </target_audience>
+
+    <buyer_persona> - Buyer persona details will be provided from the output of
+    the `creating_buyer_persona` task. </buyer_persona>
+
+    The Jobs to be Done (JTBD) framework focuses on understanding the underlying
+    motivations and desired outcomes that drive customers to "hire" a product or
+    service. Instead of focusing solely on product features, JTBD emphasizes the
+    progress that customers are trying to make in their lives.
+
+    To create the JTBD statement, follow these steps:
+
+    1. Carefully review all the provided information about the business,
+    product/service, target audience, and buyer persona.
+
+    2. Answer the following five key questions based on the information
+    provided. Use your analytical skills to infer answers if they are not
+    explicitly stated in the inputs. Write your answers inside <analysis> tags.
+
+      a. What is the main "job" the customer is trying to accomplish by using this product/service?
+      b. What problem or pain point is the customer trying to solve with this product/service?
+      c. What outcome does the customer hope to achieve after using this product/service?
+      d. What obstacles or frustrations does the customer experience while trying to get this job done?
+      e. Why would a customer choose this product over alternatives?
+
+    3. Based on your analysis, create a brief JTBD statement that summarizes:
+      - The main "job" the product/service helps customers accomplish
+      - Why customers would "hire" this product/service over other options
+  expected_output: >
+
+    Your final output should be structured as follows: <analysis> [Your answers
+    to the five key questions] </analysis>
+
+    <jtbd_statement> [Your brief JTBD statement, no more than 2-3 sentences]
+    </jtbd_statement>
+
+    Remember to focus on the functional, emotional, and social dimensions of the
+    job, and highlight what  makes this product/service uniquely suited to help
+    customers accomplish their goals.
+
+      
+  agent: JTBDAnalysisAgent
+  inputs:
+    target_audience: '{{TARGET_AUDIENCE}}'
+    business_details: '{{BUSINESS_DETAILS}}'
+    product_description: '{{PRODUCT_DESCRIPTION}}'
+    buyer_persona: '{{creating_buyer_persona.output}}'
+
+analysing_stages_of_awareness:
+  description: >
+    You are tasked with conducting a Stages of Awareness analysis based on the
+    provided information about a target audience, buyer persona, motivations and
+    desired outcomes, business details, and product/service/solutions details.
+    The Stages of Awareness concept, developed by Eugene Schwartz, helps
+    understand how aware potential customers are of their problems and the
+    available solutions. Here is the information you'll be working with:
+
+    <target_audience> {{TARGET_AUDIENCE}} </target_audience>
+
+    <buyer_persona> - Buyer persona details will be provided from the output of
+    the `creating_buyer_persona` task. </buyer_persona>
+
+    <motivations_outcomes> - JTBD motivation framework details will be provided
+    from the output of the 'analysing_jtbd' task </motivations_outcomes>
+
+    <business_details> {{BUSINESS_DETAILS}} </business_details>
+
+    <product_description> {{PRODUCT_DESCRIPTION}} </product_description>
+
+    Using this information, analyze the target audience's awareness level across
+    the following stages:
+
+    1. Unaware: The audience doesn't know they have a problem. 2. Problem Aware:
+    They know they have a problem but don't know there's a solution. 3. Solution
+    Aware: They know a solution exists but don't know about the specific
+    product/service. 4. Product Aware: They know about the product/service but
+    aren't sure if it's right for them. 5. Most Aware: They know a lot about the
+    product/service and are almost ready to buy.
+
+    For each stage, consider: - What percentage of the target audience might be
+    in this stage? - What key messages or information would resonate with people
+    in this stage? - What marketing channels or tactics might be most effective
+    for reaching people in this stage?
+  expected_output: >
+    Present your analysis in the following structure:
+
+    <stages_of_awareness_analysis> <unaware> [Your analysis for the Unaware
+    stage] </unaware>
+
+    <problem_aware> [Your analysis for the Problem Aware stage] </problem_aware>
+
+    <solution_aware> [Your analysis for the Solution Aware stage]
+    </solution_aware>
+
+    <product_aware> [Your analysis for the Product Aware stage] </product_aware>
+
+    <most_aware> [Your analysis for the Most Aware stage] </most_aware>
+    </stages_of_awareness_analysis>
+
+    After completing the analysis, provide a summary of your findings and
+    recommendations for marketing strategies based on the Stages of Awareness
+    analysis. Include this in:
+
+    <summary_and_recommendations> [Your summary and recommendations]
+    </summary_and_recommendations>
+
+    Ensure that your analysis is thorough, insightful, and directly relates to
+    the provided information about the target audience, buyer persona,
+    motivations, business, and product/service details.
+  agent: StagesofAwarenessAgent
+  inputs:
+    target_audience: '{{TARGET_AUDIENCE}}'
+    buyer_persona: '{{creating_buyer_persona.output}}'
+    analysing_jtbd: '{{analysing_jtbd.output}}'
