updated config files, added nginx and ssl proxy https

--- a/src/akkiai/config/agents1.yaml
+++ b/src/akkiai/config/agents1.yaml
@@ -14,3 +14,4 @@ TargetAudienceAgent:
     marketing and business intelligence specialist tasked with identifying and
     defining target audience segments for a business, ensuring that marketing
     efforts are focused and effective.
+  memory: False
